// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createNewProject > assets 1`] = `
[
  ".agents/skills/repoctl/references/commands.md",
  ".agents/skills/repoctl/references/config.md",
  ".agents/skills/repoctl/references/dependencies.md",
  ".agents/skills/repoctl/references/knip.md",
  ".agents/skills/repoctl/references/templates.md",
  ".agents/skills/repoctl/SKILL.md",
  ".dockerignore",
  ".editorconfig",
  ".gitattributes",
  ".github/auto-changeset/github.mjs",
  ".github/auto-changeset/index.mjs",
  ".github/FUNDING.yml",
  ".github/ISSUE_TEMPLATE/bug_report.yml",
  ".github/ISSUE_TEMPLATE/config.yml",
  ".github/workflows/ci.yml",
  ".github/workflows/release-intent-auto.yml",
  ".github/workflows/release-intent-check.yml",
  ".github/workflows/release.yml",
  ".husky/commit-msg",
  ".husky/pre-commit",
  ".husky/pre-push",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  "AGENTS.md",
  "CLAUDE.md",
  "CODE_OF_CONDUCT.md",
  "commitlint.config.ts",
  "CONTRIBUTING.md",
  "Dockerfile",
  "eslint.config.js",
  "gitignore",
  "LICENSE",
  "lint-staged.config.js",
  "npmrc",
  "package.json",
  "pnpm-workspace.yaml",
  "renovate.json",
  "repoctl.config.ts",
  "SECURITY.md",
  "stylelint.config.js",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo cli case 1`] = `
[
  ".gitignore",
  "bin/index.js",
  "dev/index.ts",
  "package.mock.json",
  "src/cli.ts",
  "src/index.ts",
  "tsconfig.json",
  "tsdown.config.ts",
]
`;

exports[`createNewProject > createNewProject demo client case 1`] = `
[
  ".gitignore",
  "AGENTS.md",
  "eslint.config.js",
  "index.html",
  "package.mock.json",
  "public/vite.svg",
  "src/App.vue",
  "src/main.ts",
  "src/pages/index.vue",
  "src/query-keys.ts",
  "src/router/index.ts",
  "src/stores/i18n.ts",
  "src/stores/index.ts",
  "src/style.css",
  "src/trpc/index.ts",
  "src/vite-env.d.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.worker.json",
  "turbo.json",
  "vite.config.ts",
  "worker/app.ts",
  "worker/config.ts",
  "worker/fetch-entry.ts",
  "worker/node-entry.ts",
  "worker/trpc-router.ts",
  "wrangler.jsonc",
]
`;

exports[`createNewProject > createNewProject demo default case 1`] = `
[
  "package.mock.json",
  "src/index.ts",
  "test-d/index.test-d.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsdown.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo server case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "package.mock.json",
  "src/app.ts",
  "src/config.ts",
  "src/fetch-entry.ts",
  "src/node-entry.ts",
  "test/index.test.ts",
  "tsconfig.json",
  "tsconfig.worker.json",
  "tsdown.config.ts",
  "turbo.json",
  "vitest.config.ts",
  "wrangler.jsonc",
]
`;

exports[`createNewProject > createNewProject demo vue-ui case 1`] = `
[
  ".gitignore",
  "eslint.config.js",
  "package.mock.json",
  "src/HelloWorld.vue",
  "src/index.ts",
  "src/vite-env.d.ts",
  "test-d/index.test-d.ts",
  "test/index.test.ts",
  "tsconfig.app.json",
  "tsconfig.json",
  "tsconfig.node.json",
  "tsconfig.test.json",
  "vite.config.ts",
  "vite.shared.config.ts",
  "vitest.config.ts",
]
`;

exports[`createNewProject > createNewProject demo website case 1`] = `
[
  ".gitignore",
  ".vitepress/config.ts",
  ".vitepress/env.d.ts",
  ".vitepress/home/content.ts",
  ".vitepress/home/faq.ts",
  ".vitepress/home/types.ts",
  ".vitepress/mermaid/markdown.ts",
  ".vitepress/mermaid/mermaid.vue",
  ".vitepress/mermaid/render.ts",
  ".vitepress/navigation/routes.ts",
  ".vitepress/seo.ts",
  ".vitepress/theme/components/HomePage.vue",
  ".vitepress/theme/home/foundation.css",
  ".vitepress/theme/home/index.css",
  ".vitepress/theme/home/responsive.css",
  ".vitepress/theme/home/sections.css",
  ".vitepress/theme/index.ts",
  ".vitepress/theme/Layout.vue",
  ".vitepress/theme/tailwind.css",
  "ai/create.md",
  "ai/index.md",
  "ai/llms-txt.md",
  "index.md",
  "learn/index.md",
  "learn/monorepo/commands.md",
  "learn/monorepo/index.md",
  "learn/monorepo/manage.md",
  "learn/monorepo/publish.md",
  "learn/monorepo/templates.md",
  "learn/monorepo/troubleshooting.md",
  "learn/packages/assets/npm-dt.svg",
  "learn/packages/assets/npm-ts.svg",
  "learn/packages/examples/0.npm-basic-package/index.js",
  "learn/packages/examples/0.npm-basic-package/package.json",
  "learn/packages/examples/1.npm-basic-package/index.cjs",
  "learn/packages/examples/1.npm-basic-package/index.d.ts",
  "learn/packages/examples/1.npm-basic-package/index.js",
  "learn/packages/examples/1.npm-basic-package/package.json",
  "learn/packages/examples/2.npm-basic-package/package-lock.json",
  "learn/packages/examples/2.npm-basic-package/package.json",
  "learn/packages/examples/2.npm-basic-package/README.md",
  "learn/packages/examples/2.npm-basic-package/rename-ext.js",
  "learn/packages/examples/2.npm-basic-package/src/index.ts",
  "learn/packages/examples/2.npm-basic-package/tsconfig.cjs.json",
  "learn/packages/examples/2.npm-basic-package/tsconfig.esm.json",
  "learn/packages/examples/2.npm-basic-package/tsconfig.json",
  "learn/packages/examples/3.npm-basic-package/package-lock.json",
  "learn/packages/examples/3.npm-basic-package/package.json",
  "learn/packages/examples/3.npm-basic-package/README.md",
  "learn/packages/examples/3.npm-basic-package/src/index.ts",
  "learn/packages/examples/3.npm-basic-package/tsconfig.json",
  "learn/packages/examples/3.npm-basic-package/tsdown.config.ts",
  "learn/packages/examples/usage-cjs/cjs.cjs",
  "learn/packages/examples/usage-cjs/esm.mjs",
  "learn/packages/examples/usage-cjs/index.js",
  "learn/packages/examples/usage-cjs/package-lock.json",
  "learn/packages/examples/usage-cjs/package.json",
  "learn/packages/examples/usage-esm/cjs.cjs",
  "learn/packages/examples/usage-esm/createRequire.js",
  "learn/packages/examples/usage-esm/esm.mjs",
  "learn/packages/examples/usage-esm/index.js",
  "learn/packages/examples/usage-esm/package-lock.json",
  "learn/packages/examples/usage-esm/package.json",
  "learn/packages/index.md",
  "learn/packages/modern-overview.md",
  "learn/packages/modern/bundlers.md",
  "learn/packages/modern/dts.md",
  "learn/packages/modern/esm-vs-cjs.md",
  "learn/packages/modern/index.md",
  "learn/packages/modern/package-entry-points.md",
  "learn/packages/modern/typescript.md",
  "learn/packages/module-extensions.md",
  "learn/packages/publish.md",
  "learn/packages/reuse-javascript.md",
  "learn/packages/runtime-globals.md",
  "learn/repoctl-model.md",
  "learn/tools/changeset.md",
  "learn/tools/husky.md",
  "learn/tools/index.md",
  "learn/tools/lint-staged.md",
  "learn/tools/llms-txt.md",
  "learn/tools/pnpm.md",
  "learn/tools/renovate.md",
  "learn/tools/repoctl-vs-pnpm-turborepo.md",
  "learn/tools/turborepo.md",
  "package.mock.json",
  "public/_redirects",
  "public/brand/apple-touch-icon.png",
  "public/brand/favicon.ico",
  "public/brand/repoctl-lockup-dark.svg",
  "public/brand/repoctl-lockup.svg",
  "public/brand/repoctl-mark-192.png",
  "public/brand/repoctl-mark-dark.svg",
  "public/brand/repoctl-mark.svg",
  "public/brand/repoctl-social-en.png",
  "public/brand/repoctl-social-en.webp",
  "public/brand/repoctl-social-zh.png",
  "public/brand/repoctl-social-zh.webp",
  "public/favicon.ico",
  "public/logo.jpg",
  "public/repoctl-doctor.png",
  "public/robots.txt",
  "reference/aliases.md",
  "reference/commands.md",
  "reference/config.md",
  "reference/dependencies.md",
  "reference/dependency-admission.md",
  "reference/execution-model.md",
  "reference/index.md",
  "reference/knip.md",
  "reference/output.md",
  "reference/template-assets.md",
  "reference/templates.md",
  "scripts/check-locales.ts",
  "start/choose-next.md",
  "start/diagnose.md",
  "start/first-run.md",
  "start/index.md",
  "start/install-repoctl.md",
  "start/install.md",
  "start/what-is-repoctl.md",
  "tasks/adopt-existing.md",
  "tasks/checks.md",
  "tasks/ci.md",
  "tasks/create-project.md",
  "tasks/index.md",
  "tasks/release.md",
  "tasks/reports.md",
  "tasks/troubleshooting.md",
  "test/mermaid.test.ts",
  "test/render.test.ts",
  "test/seo.test.ts",
  "tsconfig.json",
  "vitest.config.ts",
  "wrangler.jsonc",
  "zh/ai/create.md",
  "zh/ai/index.md",
  "zh/ai/llms-txt.md",
  "zh/index.md",
  "zh/learn/index.md",
  "zh/learn/monorepo/commands.md",
  "zh/learn/monorepo/index.md",
  "zh/learn/monorepo/manage.md",
  "zh/learn/monorepo/publish.md",
  "zh/learn/monorepo/templates.md",
  "zh/learn/monorepo/troubleshooting.md",
  "zh/learn/packages/assets/npm-dt.svg",
  "zh/learn/packages/assets/npm-ts.svg",
  "zh/learn/packages/examples/0.npm-basic-package/index.js",
  "zh/learn/packages/examples/0.npm-basic-package/package.json",
  "zh/learn/packages/examples/1.npm-basic-package/index.cjs",
  "zh/learn/packages/examples/1.npm-basic-package/index.d.ts",
  "zh/learn/packages/examples/1.npm-basic-package/index.js",
  "zh/learn/packages/examples/1.npm-basic-package/package.json",
  "zh/learn/packages/examples/2.npm-basic-package/package-lock.json",
  "zh/learn/packages/examples/2.npm-basic-package/package.json",
  "zh/learn/packages/examples/2.npm-basic-package/README.md",
  "zh/learn/packages/examples/2.npm-basic-package/rename-ext.js",
  "zh/learn/packages/examples/2.npm-basic-package/src/index.ts",
  "zh/learn/packages/examples/2.npm-basic-package/tsconfig.cjs.json",
  "zh/learn/packages/examples/2.npm-basic-package/tsconfig.esm.json",
  "zh/learn/packages/examples/2.npm-basic-package/tsconfig.json",
  "zh/learn/packages/examples/3.npm-basic-package/package-lock.json",
  "zh/learn/packages/examples/3.npm-basic-package/package.json",
  "zh/learn/packages/examples/3.npm-basic-package/README.md",
  "zh/learn/packages/examples/3.npm-basic-package/src/index.ts",
  "zh/learn/packages/examples/3.npm-basic-package/tsconfig.json",
  "zh/learn/packages/examples/3.npm-basic-package/tsdown.config.ts",
  "zh/learn/packages/examples/usage-cjs/cjs.cjs",
  "zh/learn/packages/examples/usage-cjs/esm.mjs",
  "zh/learn/packages/examples/usage-cjs/index.js",
  "zh/learn/packages/examples/usage-cjs/package-lock.json",
  "zh/learn/packages/examples/usage-cjs/package.json",
  "zh/learn/packages/examples/usage-esm/cjs.cjs",
  "zh/learn/packages/examples/usage-esm/createRequire.js",
  "zh/learn/packages/examples/usage-esm/esm.mjs",
  "zh/learn/packages/examples/usage-esm/index.js",
  "zh/learn/packages/examples/usage-esm/package-lock.json",
  "zh/learn/packages/examples/usage-esm/package.json",
  "zh/learn/packages/index.md",
  "zh/learn/packages/modern-overview.md",
  "zh/learn/packages/modern/bundlers.md",
  "zh/learn/packages/modern/dts.md",
  "zh/learn/packages/modern/esm-vs-cjs.md",
  "zh/learn/packages/modern/index.md",
  "zh/learn/packages/modern/package-entry-points.md",
  "zh/learn/packages/modern/typescript.md",
  "zh/learn/packages/module-extensions.md",
  "zh/learn/packages/publish.md",
  "zh/learn/packages/reuse-javascript.md",
  "zh/learn/packages/runtime-globals.md",
  "zh/learn/repoctl-model.md",
  "zh/learn/tools/changeset.md",
  "zh/learn/tools/husky.md",
  "zh/learn/tools/index.md",
  "zh/learn/tools/lint-staged.md",
  "zh/learn/tools/llms-txt.md",
  "zh/learn/tools/pnpm.md",
  "zh/learn/tools/renovate.md",
  "zh/learn/tools/repoctl-vs-pnpm-turborepo.md",
  "zh/learn/tools/turborepo.md",
  "zh/reference/aliases.md",
  "zh/reference/commands.md",
  "zh/reference/config.md",
  "zh/reference/dependencies.md",
  "zh/reference/dependency-admission.md",
  "zh/reference/execution-model.md",
  "zh/reference/index.md",
  "zh/reference/knip.md",
  "zh/reference/output.md",
  "zh/reference/template-assets.md",
  "zh/reference/templates.md",
  "zh/start/choose-next.md",
  "zh/start/diagnose.md",
  "zh/start/first-run.md",
  "zh/start/index.md",
  "zh/start/install-repoctl.md",
  "zh/start/install.md",
  "zh/start/what-is-repoctl.md",
  "zh/tasks/adopt-existing.md",
  "zh/tasks/checks.md",
  "zh/tasks/ci.md",
  "zh/tasks/create-project.md",
  "zh/tasks/index.md",
  "zh/tasks/release.md",
  "zh/tasks/reports.md",
  "zh/tasks/troubleshooting.md",
]
`;

exports[`createNewProject > upgradeMonorepo 1`] = `
[
  ".agents/skills/repoctl/references/commands.md",
  ".agents/skills/repoctl/references/config.md",
  ".agents/skills/repoctl/references/dependencies.md",
  ".agents/skills/repoctl/references/knip.md",
  ".agents/skills/repoctl/references/templates.md",
  ".agents/skills/repoctl/SKILL.md",
  ".dockerignore",
  ".editorconfig",
  ".gitattributes",
  ".github/auto-changeset/github.mjs",
  ".github/auto-changeset/index.mjs",
  ".github/FUNDING.yml",
  ".github/ISSUE_TEMPLATE/bug_report.yml",
  ".github/ISSUE_TEMPLATE/config.yml",
  ".github/workflows/ci.yml",
  ".github/workflows/release-intent-auto.yml",
  ".github/workflows/release-intent-check.yml",
  ".github/workflows/release.yml",
  ".gitignore",
  ".husky/commit-msg",
  ".husky/pre-commit",
  ".husky/pre-push",
  ".npmrc",
  ".repoctl/baselines/root/07985fdcade0e64d11482724879a644f07879ba61b8fb6c6119e1b1902b72ae4.json",
  ".repoctl/baselines/root/0947e2727d6bad8cd0ac4122f5314bb5b04e337393075bc4b5ef143b17fcbd5b.json",
  ".repoctl/baselines/root/18ae0a0fab29a7db7aded913fd05f30a2c8f6c104fadae86c9d217091709794c.json",
  ".repoctl/baselines/root/1c0d972ee49103af56fd608a77a28e1eb12f6908f263f0f183d46868fdcd8ea2.json",
  ".repoctl/baselines/root/22b6df9f817462f18ac643211a6039289d8dac8ea5a9844e052ea74103ba9f71.json",
  ".repoctl/baselines/root/292bac03df29207ee254ba91cfc30951b10c50c0a9fff3a0768778cebe5f4c4a.json",
  ".repoctl/baselines/root/29c15f0b5d8d1144bd22153c302cde16c2de092d65b122a618cbdb3023336346.json",
  ".repoctl/baselines/root/2ee894bf23aa44ff4ce12a3da8af19ab20180474ebf2176dbe5f2eea3f96dc92.json",
  ".repoctl/baselines/root/2f754321d62f08ba8392b9b168b83e24ea2852bb5d815d63e767f6c3d23c6ac5.json",
  ".repoctl/baselines/root/2fb10ca14a47c76cf3b6dcb1d2c6675fc213a2533b041a315fed06c8d40355b1.json",
  ".repoctl/baselines/root/311d394fdc20e95706b6692fe6d35e471c21fd48c546d369b7b815f09672d0b4.json",
  ".repoctl/baselines/root/42bcb39c4e0bdf439333e2c0b2c9b18ac2d8cbcb57e7bebc4a919db8f7de6103.json",
  ".repoctl/baselines/root/43bbc75a027a43baaddc57670d8ab49b4aa2981053c3cabba17567723d3a9fb6.json",
  ".repoctl/baselines/root/46bfbc038a32d9baa3a279c110a2c5b906525a5842f5a55d2b69846c5c92cc3e.json",
  ".repoctl/baselines/root/5420316dbc5ca52c18d232ce84e051929a859853d654ff9b2d129878cefd5a4f.json",
  ".repoctl/baselines/root/618cd5b83d62060ba3d027e314a21ceaf75d36067ff820db126642944145393e.json",
  ".repoctl/baselines/root/637f7b97bba458badb691a1557c3d4648686292e948dbe3e8360564378b653ef.json",
  ".repoctl/baselines/root/6ebdb617a8104a7756d0cf36578ab01103dc9f07e4dc6feb751296b9c402faf7.json",
  ".repoctl/baselines/root/7b5c8955fc544a11b4b74eddb4115f9cc51c9cf162dbffa60d37eeed82a55a57.json",
  ".repoctl/baselines/root/87db21a973eed4fef5f32b267aa60fcee5cbdf03c67fafdc2a9b553bb0b15f34.json",
  ".repoctl/baselines/root/a32a0887ed9d1d707bbb3b845b7df7fd40e673c47e7b60a3ebd896b68d3b8839.json",
  ".repoctl/baselines/root/a54ff182c7e8acf56acfd6e4b9c3ff41e2c41a31c9b211b2deb9df75d9a478f9.json",
  ".repoctl/baselines/root/a5de3e5871ffcc383a2294845bd3df25d3eeff6c29ad46e3a396577c413bf357.json",
  ".repoctl/baselines/root/b55cdbef4907b7045f32cc5360d48d262cca5f94062e353089f189f4460039e0.json",
  ".repoctl/baselines/root/b803fcb7f17ed9235f1e5cb1fcd2f5d3b2838429d4368ae4c57ce4436577f03f.json",
  ".repoctl/baselines/root/bc37d034bad564583790a46f19d807abfe519c5671395fd494d8cce506c42947.json",
  ".repoctl/baselines/root/bef0fca22fde95d0c97f088eb9e3128160b10d81931611a892e4bdeade487475.json",
  ".repoctl/baselines/root/c16655a98a3ee89a7636a59c59a72b0e93649e3a1e947327cfc43a1336b4e912.json",
  ".repoctl/baselines/root/c693279643b8cd5d248172d9c22cb7cf4ed163a3c98c8a3f69c2717edd3eacb7.json",
  ".repoctl/baselines/root/ce6f735431c4991c91d8bcf0d9a204563a3c74bbee92504f95dfe5325e5988e8.json",
  ".repoctl/baselines/root/cf86e504cd55eede0ad9db0108b2e76aa95a948a361956538d7bbb61c6d0999b.json",
  ".repoctl/baselines/root/d2bc4bbf14eadc292d84e0ef5f7a93115c23557f533809fc80b896934291529d.json",
  ".repoctl/baselines/root/d5742af09eb0b42924db7b8fff821c0f749d3278c9ee03167f78f48adaae6ab3.json",
  ".repoctl/baselines/root/d683e2c690c3cd50f9088ac0671cad1de831e7520400f67339bbd8729e57818f.json",
  ".repoctl/baselines/root/dd2c0eb6ea5cfc6c4bd4eac30934e2d5746747af48fef6da689e85b752f39557.json",
  ".repoctl/baselines/root/e813096d69c49812e40e00be9ac8fa14d77f0ec1f97ab4c45cb096b3bedd35de.json",
  ".repoctl/baselines/root/ea01a70d36954bbabd550cf547e3da246ef1fb9d000391d71780c02564be9ba4.json",
  ".repoctl/baselines/root/eca12c0a30e25b4b46522ebf89465a03ba72a03f540796c979137931d8f92055.json",
  ".repoctl/baselines/root/f6ed156e4bf5c791680662464b94ea5d753f219ee816b385f67870e2c0d7d4c7.json",
  ".repoctl/baselines/root/f8de965273949793edc0fbfe249bb458c0becde39b2e141db087bcbf5d4ad5e3.json",
  ".repoctl/baselines/root/ffdbe3a1e7ee93cacfc080b6c635ccf3a8f6b0f00f2fb884f78c6b5f9dac8fd2.json",
  ".vscode/extensions.json",
  ".vscode/settings.json",
  "AGENTS.md",
  "CLAUDE.md",
  "CODE_OF_CONDUCT.md",
  "commitlint.config.ts",
  "CONTRIBUTING.md",
  "Dockerfile",
  "eslint.config.js",
  "LICENSE",
  "lint-staged.config.js",
  "pnpm-workspace.yaml",
  "renovate.json",
  "repoctl.config.ts",
  "SECURITY.md",
  "stylelint.config.js",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
]
`;
